--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 avail-rust = { git = "https://github.com/availproject/avail" }
+clap = { version = "4.5.23", features = ["derive"] }
 tokio = { version = "1.38.0", features = ["full"] }
+zmq = "0.10.0"
