--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 avail-rust = { git = "https://github.com/availproject/avail" }
 clap = { version = "4.5.23", features = ["derive"] }
-tokio = { version = "1.38.0", features = ["full"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+tokio = { version = "1", features = ["full"] }
+serde_json = "1.0"
 zmq = "0.10.0"
