--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
 zmq = "0.10.0"
+dotenv = "0.15.0"
