--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-avail-rust = { git = "https://github.com/availproject/avail" }
 clap = { version = "4.5.23", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 tokio = { version = "1", features = ["full"] }
@@ -14,3 +13,4 @@ serde_json = "1.0"
 zmq = "0.10.0"
 dotenv = "0.15.0"
 ethabi = "16.0.0"
+avail-rust-client = "0.4.0"
