--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,7 @@ serde_json = "1.0"
 zmq = "0.10.0"
 dotenv = "0.15.0"
 ethabi = "16.0.0"
+serde = { version = "1.0", features = ["derive"] }
+hex = "0.4"
 avail-rust-client = "0.4.0"
+ethers = { version = "2.0", features = ["rustls"] }
